--- a/neopixel_pio/CMakeLists.txt
+++ b/neopixel_pio/CMakeLists.txt
@@ -49,7 +49,10 @@ pico_sdk_init()
 
 # Add executable. Default name is the project name, version 0.1
 
-add_executable(neopixel_pio neopixel_pio.c )
+add_executable(neopixel_pio 
+                    neopixel_pio.c
+                    inc/ssd1306_i2c.c
+)
 
 pico_set_program_name(neopixel_pio "neopixel_pio")
 pico_set_program_version(neopixel_pio "0.1")
@@ -74,6 +77,8 @@ target_include_directories(neopixel_pio PRIVATE
 target_link_libraries(neopixel_pio 
         hardware_pio
         hardware_clocks
+        hardware_i2c
+        hardware_pwm
         )
 
 pico_add_extra_outputs(neopixel_pio)
