--- a/neopixel_pio/.vscode/settings.json
+++ b/neopixel_pio/.vscode/settings.json
@@ -35,5 +35,11 @@
     "raspberry-pi-pico.cmakeAutoConfigure": true,
     "raspberry-pi-pico.useCmakeTools": false,
     "raspberry-pi-pico.cmakePath": "${HOME}/.pico-sdk/cmake/v3.28.6/bin/cmake",
-    "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja"
+    "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
+    "files.associations": {
+        "stdio.h": "c",
+        "matriz_leds.h": "c",
+        "ssd1306_i2c.h": "c",
+        "buzzer.h": "c"
+    }
 }
